# Stendhal

./: CMakeLists.txt  GL_neuron.hpp  PD_GL.cpp  PD_GL.hpp  README.md  connection.cpp  connection.hpp  dGLPD_delta.org  dGLPD_delta.tex  dPD_GL.cpp  dPD_GL.cpp.old  dPD_GL.hpp  dPD_GL.hpp.old  dPD_GL_psc_delta_xoroshiro.org  dPD_GL_psc_delta_xoroshiro.tex  dummy.cpp  dummy.hpp  gl_psc_exp.cpp  gl_psc_exp.hpp  local.bib  main.cpp  main_dPD_GL.cpp  main_dPD_GL.cpp.old  network.hpp  simulation-manager.cpp  simulation-manager.hpp  test.cpp  test_friend.cpp  test_gl_psc_exp.cpp
bin_comp_DC_poisson/: plot_comp_DC_poisson.py
src/: CMakeLists.txt  dGLPD_delta.cpp  dGLPD_delta.hpp  dPD_GL.cpp  dPD_GL.hpp  gl_psc_delta.cpp  gl_psc_delta.hpp  gl_psc_exp.cpp  gl_psc_exp.hpp  main_DC_frate.cpp  main_compare_DC_poisson.cpp  main_dGLPD_delta.cpp  main_dPD_GL.cpp  plot_DC_frate.py  stendhalconfig.h.in
